--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,10 +54,10 @@
           <br>
 
           <li class="nav-item">
-            <a href="pages/widgets.html" class="nav-link">
-              <i class="nav-icon far fa-calendar-alt"></i>
+            <a routerLink="/admin/all_employees" routerLinkActive="active" class="nav-link">
+              <i class="nav-icon fas fa-users"></i>
               <p>
-                Vacation
+                Employees
               </p>
             </a>
           </li>
@@ -65,10 +65,10 @@
           <br>
 
           <li class="nav-item">
-            <a routerLink="/admin/all_employees" routerLinkActive="active" class="nav-link">
-              <i class="nav-icon fas fa-users"></i>
+            <a routerLink="/admin/vacations" routerLinkActive="active" class="nav-link">
+              <i class="nav-icon far fa-calendar-alt"></i>
               <p>
-                Employees
+                Vacation Requests
               </p>
             </a>
           </li>
@@ -177,7 +177,7 @@
           <br>
 
           <li class="nav-item">
-            <a  class="nav-link" routerLink="/employee/vacation" routerLinkActive="active">
+            <a  class="nav-link" routerLink="/employee/all_vacations" routerLinkActive="active">
               <i class="nav-icon far fa-calendar-alt"></i>
               <p>
                 Vacation
