--- a/src/app/modules/employee/employee-components/apply-vacation/apply-vacation.component.html
+++ b/src/app/modules/employee/employee-components/apply-vacation/apply-vacation.component.html
@@ -41,7 +41,7 @@
 
                         <div class="card-footer">
                           <button style='margin-right:16px' type="submit" class="btn btn-primary" [disabled]="validateFrom.invalid" (click)="applyVacation()">Submit</button>
-                          <button style='margin-right:16px' class="btn btn-danger" routerLink="/admin/all_employees">Cancel</button>
+                          <button style='margin-right:16px' class="btn btn-danger" routerLink="/employee/all_vacations">Cancel</button>
                         </div>
                       </div>
                     </form>
