--- a/src/app/modules/admin/admin-components/all-employees/all-employees.component.html
+++ b/src/app/modules/admin/admin-components/all-employees/all-employees.component.html
@@ -38,8 +38,8 @@
                   <td>{{ employee.dob | date: 'd,MMM,y' }}</td>
 
                   <td>
-                    <a style='margin-right:16px' class="btn btn-sm btn-info" routerLink="/admin/add_employee/{{employee.id}}"><i class="fas fa-edit"></i>Edit</a>
-                    <a style='margin-right:16px' class="btn btn-sm btn-danger alert-delete" (click)="deleteEmployee(employee.id)">Delete</a>
+                    <a style='margin-right:16px' class="btn btn-info btn-sm" routerLink="/admin/add_employee/{{employee.id}}"><i class="fas fa-pencil-alt"></i>Edit</a>
+                    <a style='margin-right:16px' class="btn btn-danger btn-sm" (click)="deleteEmployee(employee.id)"><i class="fas fa-trash"></i>Delete</a>
                     <form id="" method="POST">
                     </form>
                   </td>
