--- a/src/app/modules/admin/admin-components/all-vacations/all-vacations.component.html
+++ b/src/app/modules/admin/admin-components/all-vacations/all-vacations.component.html
@@ -1,1 +1,72 @@
-<p>all-vacations works!</p>
+<!-- Content Header (Page header) -->
+<div class="content-header">
+  <div class="container-fluid">
+    <div class="row mb-2">
+      <div class="col-sm-6">
+        <h2 class="m-0 text-dark">Employees</h2><br>
+      </div><!-- /.content -->
+    </div><!-- /.col -->
+    </div><!-- /.row -->
+    </div><!-- /.container-fluid -->
+
+<!-- Main content -->
+<div class="content">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="card card-primary card-outline">
+          <div class="card-body">
+            <h2>List of Employees</h2><br>
+            <a routerLink="/admin/add_employee"  class="btn btn-sm btn-primary"><i class="fa fa-plus"></i> Add Employee</a><br><br>
+            <table class="table table-bordered">
+              <thead>
+                <tr>
+                  <th>#</th>
+
+                  <th class="tl">Name</th>
+                  <th class="tl">Type</th>
+                  <th class="tl">Start Day</th>
+                  <th class="tl">End Day</th>
+                  <th class="tl">Date</th>
+                  <th class="">Status</th>
+                  <th class="">Action</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let vacation of vacations; let i = index">
+                  <td>{{ i + 1 }}</td>
+                  <td>{{ vacation.name }}</td>
+                  <td>{{ vacation.type }}</td>
+                  <td>{{ vacation.sd | date: 'd,MMM,y' }}</td>
+                  <td>{{ vacation.ed | date: 'd,MMM,y' }}</td>
+                  <td>{{ vacation.date | date: 'd,MMM,y' }}</td>
+                  <td><strong [ngStyle]="{'color': vacation.vacationStatus === 'APPROVED' ? 'green' : vacation.vacationStatus === 'DISAPPROVED' ? 'blue' : 'red'}"> {{ vacation.vacationStatus}} </strong> </td>
+
+
+
+                  <td>
+
+
+                      <a class=" dropdown-toggle" data-toggle="dropdown">
+                        Action <span class="caret"></span>
+                      </a>
+                      <div class="dropdown-menu">
+                        <a class="dropdown-item" tabindex="-1" >Another action</a>
+                        <a class="dropdown-item" tabindex="-1">Something else here</a>
+                      </div>
+
+              </td>
+
+
+
+                </tr>
+              </tbody>
+            </table>
+          </div><!-- /.card-body -->
+        </div><!-- /.card -->
+      </div><!-- /.col-lg-12 -->
+    </div><!-- /.row -->
+  </div><!-- /.container-fluid -->
+
+
+
