--- a/src/app/modules/admin/admin-components/all-vacations/all-vacations.component.html
+++ b/src/app/modules/admin/admin-components/all-vacations/all-vacations.component.html
@@ -3,7 +3,7 @@
   <div class="container-fluid">
     <div class="row mb-2">
       <div class="col-sm-6">
-        <h2 class="m-0 text-dark">Employees</h2><br>
+        <h2 class="m-0 text-dark">Vacation Requests</h2><br>
       </div><!-- /.content -->
     </div><!-- /.col -->
     </div><!-- /.row -->
@@ -16,8 +16,8 @@
       <div class="col-lg-12">
         <div class="card card-primary card-outline">
           <div class="card-body">
-            <h2>List of Employees</h2><br>
-            <a routerLink="/admin/add_employee"  class="btn btn-sm btn-primary"><i class="fa fa-plus"></i> Add Employee</a><br><br>
+            <h2>List of vacation requests</h2><br>
+
             <table class="table table-bordered">
               <thead>
                 <tr>
@@ -51,8 +51,8 @@
                         Action <span class="caret"></span>
                       </a>
                       <div class="dropdown-menu">
-                        <a class="dropdown-item" tabindex="-1" >Another action</a>
-                        <a class="dropdown-item" tabindex="-1">Something else here</a>
+                        <a class="dropdown-item" tabindex="-1" >Approved</a>
+                        <a class="dropdown-item" tabindex="-1">Disapproved</a>
                       </div>
 
               </td>
