--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -31,8 +31,13 @@
 
 button{
   width: 100%;
+  background:#003973;
+
 }
 
+.mat-raised-button{
+  background:#003973;
+}
 @media (max-width: 768px){
   .parent{
     padding: 0 10px;
