--- a/src/app/employee/index-employee/index-employee.component.html
+++ b/src/app/employee/index-employee/index-employee.component.html
@@ -3,7 +3,7 @@
   <div class="container-fluid">
     <div class="row mb-2">
       <div class="col-sm-6">
-        <h2 class="m-0 text-dark">Projects</h2>
+        <h2 class="m-0 text-dark">Employees</h2>
       </div><!-- /.col -->
     </div><!-- /.row -->
   </div><!-- /.container-fluid -->
@@ -16,18 +16,26 @@
       <div class="col-lg-12">
         <div class="card card-primary card-outline">
           <div class="card-body">
-            <h2>List of Tickets</h2>
-            <a href="#" class="btn btn-sm btn-primary"><i class="fa fa-plus"></i> Add Project</a>
+            <h2>List of Employees</h2>
+            <a href="#" class="btn btn-sm btn-primary"><i class="fa fa-plus"></i> Add Employee</a>
             <table class="table table-bordered">
               <thead>
                 <tr>
                   <th>#</th>
-                  <th class="tl">Name</th>
+                  <th class="tl">Employee's Name </th>
+                  <th class="tl">Password</th>
+                  <th class="tl">Email</th>
+                  <th class="tl">Gender</th>
+                  <th class="tl">Birth day</th>
                   <th class="">Action</th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
                   <td></td>
                   <td></td>
 
