--- a/src/app/working_hours/tickets/create-ticket/create-ticket.component.html
+++ b/src/app/working_hours/tickets/create-ticket/create-ticket.component.html
@@ -1,9 +1,4 @@
-<app-control-sidebar></app-control-sidebar>
-<app-main-header></app-main-header>
-<app-main-sidebar></app-main-sidebar>
-<app-main-footer></app-main-footer>
-
-<h2 class="m-0 text-dark">Ticket</h2><br>
+<h2 class="m-0 text-dark">Tickets</h2><br>
 <div class="content">
 
   <div class="container-fluid">
