--- a/src/app/vacation/create-vacation/create-vacation.component.html
+++ b/src/app/vacation/create-vacation/create-vacation.component.html
@@ -1,9 +1,4 @@
-<app-control-sidebar></app-control-sidebar>
-<app-main-header></app-main-header>
-<app-main-sidebar></app-main-sidebar>
-<app-main-footer></app-main-footer>
-
-<h2 class="m-0 text-dark">Vacation</h2><br>
+<h2 class="m-0 text-dark">Vacations</h2><br>
 <div class="content">
 
   <div class="container-fluid">
