--- a/src/app/modules/employee/employee-components/get-all-vacations/get-all-vacations.component.html
+++ b/src/app/modules/employee/employee-components/get-all-vacations/get-all-vacations.component.html
@@ -34,7 +34,7 @@
                   <td>{{ vacation.type }}</td>
                   <td>{{ vacation.sd | date: 'd,MMM,y' }}</td>
                   <td>{{ vacation.ed | date: 'd,MMM,y' }}</td>
-                  <td><strong [ngStyle]="{'color': vacation.vacationStatus === 'APPROVED' ? 'green' : vacation.vacationStatus === 'DISAPPROVED' ? 'blue' : 'red'}"> {{ vacation.vacationStatus}} </strong> </td>
+                  <td><strong [ngStyle]="{'color': vacation.vacationStatus === 'Approved' ? 'green' : vacation.vacationStatus === 'Disapproved' ? 'blue' : 'red'}"> {{ vacation.vacationStatus}} </strong> </td>
 
                 </tr>
               </tbody>
