--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -153,7 +153,7 @@
 
 
               <li class="nav-item">
-                <a routerLink="/employee/create_ticket" routerLinkActive="active" class="nav-link">
+                <a routerLink="/employee/all_tickets" routerLinkActive="active" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Ticket</p>
                 </a>
