--- a/src/app/modules/employee/employee-components/get-all-vacations/get-all-vacations.component.html
+++ b/src/app/modules/employee/employee-components/get-all-vacations/get-all-vacations.component.html
@@ -26,15 +26,20 @@
                   <th class="tl">Start Date </th>
                   <th class="tl">End Date </th>
                   <th class="tl">Status </th>
+                  <th class="">Action</th>
                 </tr>
               </thead>
               <tbody>
                 <tr *ngFor="let vacation of vacations; let i = index">
                   <td>{{ i + 1 }}</td>
                   <td>{{ vacation.type }}</td>
-                  <td>{{ vacation.sd | date: 'd,MMM,y' }}</td>
-                  <td>{{ vacation.ed | date: 'd,MMM,y' }}</td>
+                  <td>{{ vacation.sd | date: 'd/MMM/y' }}</td>
+                  <td>{{ vacation.ed | date: 'd/MMM/y' }}</td>
                   <td><strong [ngStyle]="{'color': vacation.vacationStatus === 'Approved' ? 'green' : vacation.vacationStatus === 'Disapproved' ? 'blue' : 'red'}"> {{ vacation.vacationStatus}} </strong> </td>
+                  <td>
+                    <a style='margin-right:16px' class="btn btn-sm btn-info" ><i class="fas fa-pencil-alt"></i>Edit</a>
+                    <a style='margin-right:16px' class="btn btn-sm btn-danger alert-delete" (click)="deleteVacation(vacation.id)" ><i class="fas fa-trash"></i>Delete</a>
+                  </td>
 
                 </tr>
               </tbody>
