--- a/src/app/modules/employee/employee-components/get-all-tickets/get-all-tickets.component.html
+++ b/src/app/modules/employee/employee-components/get-all-tickets/get-all-tickets.component.html
@@ -37,7 +37,7 @@
                   <td>{{ ticket.projectName }}</td>
                   <td>{{ ticket.tname }}</td>
                   <td>{{ ticket.duration }}</td>
-                  <td>{{ ticket.date | date: 'd,MMM,y' }}</td>
+                  <td>{{ ticket.date | date: 'd/MMM/y' }}</td>
                   <td>{{ ticket.ticketStatus }}</td>
                   <td>{{ ticket.description }}</td>
 
