--- a/src/app/working_hours/projects/edit-project/edit-project.component.css
+++ b/src/app/working_hours/projects/edit-project/edit-project.component.css
@@ -43,3 +43,20 @@ label {
   height: 35px;
   font-size: 16px;
 }
+
+
+.calendar {
+  text-align: center;
+  font-size: 30px;
+}
+
+.mmm {
+  margin-left: 990px;
+  position: relative;
+}
+
+.navigation {
+  position: relative;
+  top: 57px;
+}
+
