--- a/src/app/working_hours/projects/edit-project/edit-project.component.html
+++ b/src/app/working_hours/projects/edit-project/edit-project.component.html
@@ -1,45 +1,21 @@
-<div class="content-header">
-  <div class="container-fluid">
-    <div class="row mb-2">
-      <div class="col-sm-6">
-        <h2 class="m-0 text-dark">Projects</h2><br>
-        <div class="content">
-
-          <div class="content">
-            <div class="container-fluid">
-              <div class="row">
-                <div class="col-lg-12">
-                  <div class="card card-primary card-outline">
-                    <div class="card-body">
-                      <h2>Edit Project</h2><br>
-
-                      <form [formGroup]="validateFrom">
-                        <div class="card-body">
-
-                          <div class="form-group">
-                            <label for="name">Ticket Name:</label>
-                            <input formControlName="name" type="text" class="form-control" id="name"
-                              placeholder="Enter Project's name">
-                            <span *ngIf="validateFrom.get('name').invalid && validateFrom.get('name').touched"
-                              class="text-danger">This input is required!</span>
-                          </div>
-
-                          <div class="card-footer">
-                            <button type="submit" class="btn btn-primary"
-                              [disabled]="validateFrom.invalid">Submit</button>
-                          </div>
-                        </div>
-                      </form>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+<div id="calendar-container">
+  <div id="cal-buttons" _ngcontent-kea-c45="">
+    <div id="cal-date-nav-buttons" class="navigation">
+      <button id="previous" mwlCalendarPreviousView [(viewDate)]="viewDate" [view]="view"
+        class="btn btn-primary">Previous</button>
+      <button id="today" mwlCalendarToday [(viewDate)]="viewDate" class="btn btn-primary">Today</button>
+      <button id="next" mwlCalendarNextView [(viewDate)]="viewDate" [view]="view" class="btn btn-primary">Next</button>
+    </div>
+    <div id="cal-date-field" class="calendar">{{ viewDate | calendarDate:(view + 'ViewTitle') : 'en'}}</div>
+    <div id="cal-view-nav-buttons" class="mmm">
+      <button id="month" (click)="setView(CalendarView.Month)" class="btn btn-primary">Month</button>
+      <button id="week" (click)="setView(CalendarView.Week)" class="btn btn-primary">Week</button>
+      <button id="day" (click)="setView(CalendarView.Day)" class="btn btn-primary">Day</button>
     </div>
   </div>
+  <span [ngSwitch]="view">
+    <mwl-calendar-month-view *ngSwitchCase="CalendarView.Month" [viewDate]="viewDate"></mwl-calendar-month-view>
+    <mwl-calendar-week-view *ngSwitchCase="CalendarView.Week" [viewDate]="viewDate"></mwl-calendar-week-view>
+    <mwl-calendar-day-view *ngSwitchCase="CalendarView.Day" [viewDate]="viewDate"></mwl-calendar-day-view>
+  </span>
 </div>
-
-<!-- /.content -->
