--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -19,7 +19,8 @@
         </mat-form-field>
 
         <button mat-raised-button color="primary" (click)="login()" [disabled]="loginForm.invalid" >login</button>
-      </form>
+      </form><br>
+      <a href="">Connect With Jira</a>
     </div>
   </div>
 </div>
