--- a/src/app/modules/employee/employee-components/dashboard/dashboard.component.html
+++ b/src/app/modules/employee/employee-components/dashboard/dashboard.component.html
@@ -2,15 +2,15 @@
   <div id="cal-buttons" _ngcontent-kea-c45="">
     <div id="cal-date-nav-buttons" class="navigation">
       <button id="previous" mwlCalendarPreviousView [(viewDate)]="viewDate" [view]="view"
-        class="btn btn-primary">Previous</button>
-      <button id="today" mwlCalendarToday [(viewDate)]="viewDate" class="btn btn-primary">Today</button>
-      <button id="next" mwlCalendarNextView [(viewDate)]="viewDate" [view]="view" class="btn btn-primary">Next</button>
+        class="btn btn-primary" style='margin-right:5px'>Previous</button>
+      <button id="today" mwlCalendarToday [(viewDate)]="viewDate" class="btn btn-primary" style='margin-right:5px'>Today</button>
+      <button id="next" mwlCalendarNextView [(viewDate)]="viewDate" [view]="view" class="btn btn-primary" style='margin-right:5px'>Next</button>
     </div>
     <div id="cal-date-field" class="calendar">{{ viewDate | calendarDate:(view + 'ViewTitle') : 'en'}}</div>
     <div id="cal-view-nav-buttons" class="mmm">
-      <button id="month" (click)="setView(CalendarView.Month)" class="btn btn-primary">Month</button>
-      <button id="week" (click)="setView(CalendarView.Week)" class="btn btn-primary">Week</button>
-      <button id="day" (click)="setView(CalendarView.Day)" class="btn btn-primary">Day</button>
+      <button id="month" (click)="setView(CalendarView.Month)" class="btn btn-primary" style='margin-right:5px'>Month</button>
+      <button id="week" (click)="setView(CalendarView.Week)" class="btn btn-primary" style='margin-right:5px'>Week</button>
+      <button id="day" (click)="setView(CalendarView.Day)" class="btn btn-primary" style='margin-right:5px'>Day</button>
     </div>
   </div>
   <span [ngSwitch]="view">
