--- a/src/app/modules/employee/employee-components/dashboard/dashboard.component.css
+++ b/src/app/modules/employee/employee-components/dashboard/dashboard.component.css
@@ -6,9 +6,16 @@
 .mmm {
   margin-left: 1133px;
   position: relative;
+  bottom: 10px;
 }
 
 .navigation {
   position: relative;
   top: 57px;
 }
+
+.top{
+  position: relative;
+  bottom: 10px;
+}
+
