--- a/src/app/modules/admin/admin-components/dashboard/dashboard.component.css
+++ b/src/app/modules/admin/admin-components/dashboard/dashboard.component.css
@@ -20,13 +20,13 @@
 .btn-warning {
   background-color:#007bff;
   border-color: #007bff;
-  color: aliceblue;
+  color: white;
 }
 
 .btn-warning:not(:disabled):not(.disabled).active, .btn-warning:not(:disabled):not(.disabled):active, .show>.btn-warning.dropdown-toggle {
-  background-color:#007bff;
-  border-color: #007bff;
-  color: aliceblue;
+  background-color:#0069d9;
+  border-color: #0062cc;
+  color: white;
 }
 
 
