--- a/src/app/modules/employee/employee-components/dashboard/dashboard.component.html
+++ b/src/app/modules/employee/employee-components/dashboard/dashboard.component.html
@@ -1,11 +1,15 @@
 <div id="calendar-container">
   <div id="cal-buttons" _ngcontent-kea-c45="">
     <div id="cal-date-nav-buttons" class="navigation">
+
+      <div class="top">
       <button id="previous" mwlCalendarPreviousView [(viewDate)]="viewDate" [view]="view"
         class="btn btn-primary" style='margin-right:1px'>Previous</button>
       <button id="today" mwlCalendarToday [(viewDate)]="viewDate" class="btn btn-primary" style='margin-right:1px'>Today</button>
       <button id="next" mwlCalendarNextView [(viewDate)]="viewDate" [view]="view" class="btn btn-primary" style='margin-right:1px'>Next</button>
     </div>
+
+  </div>
     <div id="cal-date-field" class="calendar">{{ viewDate | calendarDate:(view + 'ViewTitle') : 'en'}}</div>
     <div id="cal-view-nav-buttons" class="mmm">
 
