--- a/src/app/modules/employee/employee-components/apply-ticket/apply-ticket.component.html
+++ b/src/app/modules/employee/employee-components/apply-ticket/apply-ticket.component.html
@@ -11,7 +11,7 @@
               <div class="col-lg-12">
                 <div class="card card-primary card-outline">
                   <div class="card-body">
-                    <h2>create Ticket</h2>
+                    <h2>Create Ticket</h2>
 
                     <form [formGroup]="validateFrom">
                       <div class="card-body">
@@ -35,7 +35,7 @@
                         </div>
 
                         <div class="form-group">
-                          <label for="duration">Duration :</label>
+                          <label for="duration">Duration (Hours) :</label>
                           <input formControlName="duration" type="number" step="0.01" class="form-control" id="duration"
                             placeholder="Enter The Duration">
                             <span *ngIf="validateFrom.get('duration').invalid && validateFrom.get('duration').touched"
@@ -43,11 +43,16 @@
                         </div>
 
                         <div class="form-group">
-                          <label class="tp" for="date">Date :</label>
-                          <input formControlName="date" type="date" id="date" class="form-control">
+                          <label class="tp" for="date">Date and Time :</label>
+                          <input formControlName="date" type="datetime-local" id="date" class="form-control">
                           <span *ngIf="validateFrom.get('date').invalid && validateFrom.get('date').touched"
                             class="text-danger">This input is required!</span>
                         </div>
+
+
+
+
+
 
                         <div class="form-group">
                           <label class="tk" for="ticketStatus">Ticket's Status :</label>
