--- a/src/app/modules/employee/employee-components/update-ticket/update-ticket.component.html
+++ b/src/app/modules/employee/employee-components/update-ticket/update-ticket.component.html
@@ -11,7 +11,7 @@
               <div class="col-lg-12">
                 <div class="card card-primary card-outline">
                   <div class="card-body">
-                    <h2>create Ticket</h2>
+                    <h2>Create Ticket</h2>
 
                     <form [formGroup]="validateFrom">
                       <div class="card-body">
@@ -35,7 +35,7 @@
                         </div>
 
                         <div class="form-group">
-                          <label for="duration">Duration :</label>
+                          <label for="duration">Duration (Hours) :</label>
                           <input formControlName="duration" type="number" step="0.01" class="form-control" id="duration"
                             placeholder="Enter The Duration">
                             <span *ngIf="validateFrom.get('duration').invalid && validateFrom.get('duration').touched"
