--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -116,10 +116,12 @@
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
 
+
         <div class="info">
-          <p class="d-block"> Welcome {{ this.employeeName}}</p>
+          <a  class="d-block">Welcome {{ this.employeeName}} </a>
         </div>
       </div>
+
 
       <!-- SidebarSearch Form -->
 
