--- a/src/app/modules/admin/admin-components/all-vacations/all-vacations.component.html
+++ b/src/app/modules/admin/admin-components/all-vacations/all-vacations.component.html
@@ -40,7 +40,7 @@
                   <td>{{ vacation.sd | date: 'd/MMM/y' }}</td>
                   <td>{{ vacation.ed | date: 'd/MMM/y' }}</td>
                   <td>{{ vacation.date | date: 'd/MMM/y' }}</td>
-                  <td><strong [ngStyle]="{'color': vacation.vacationStatus === 'Approved' ? 'green' : vacation.vacationStatus === 'Disapproved' ? 'blue' : 'red'}"> {{ vacation.vacationStatus}} </strong> </td>
+                  <td><strong [ngStyle]="{'color': vacation.vacationStatus === 'Approved' ? '#5fbd00' : vacation.vacationStatus === 'Disapproved' ? '#f8007c' : '	#F4C430'}"> {{ vacation.vacationStatus}} </strong> </td>
 
 
 
