--- a/src/app/modules/employee/employee-components/get-all-vacations/get-all-vacations.component.html
+++ b/src/app/modules/employee/employee-components/get-all-vacations/get-all-vacations.component.html
@@ -35,7 +35,7 @@
                   <td>{{ vacation.type }}</td>
                   <td>{{ vacation.sd | date: 'd/MMM/y' }}</td>
                   <td>{{ vacation.ed | date: 'd/MMM/y' }}</td>
-                  <td><strong [ngStyle]="{'color': vacation.vacationStatus === 'Approved' ? 'green' : vacation.vacationStatus === 'Disapproved' ? 'blue' : 'red'}"> {{ vacation.vacationStatus}} </strong> </td>
+                  <td><strong [ngStyle]="{'color': vacation.vacationStatus === 'Approved' ? '#5fbd00' : vacation.vacationStatus === 'Disapproved' ? '#f8007c' : '#F4C430'}"> {{ vacation.vacationStatus}} </strong> </td>
                   <td>
                     <a *ngIf="vacation.vacationStatus === 'Pending'" style='margin-right:16px' class="btn btn-sm btn-info" ><i class="fas fa-pencil-alt" [routerLink]="['/employee/vacation', vacation.id]"></i>Edit</a>
                     <a *ngIf="vacation.vacationStatus === 'Pending'" style='margin-right:16px' class="btn btn-sm btn-danger alert-delete" (click)="deleteVacation(vacation.id)" ><i class="fas fa-trash"></i>Delete</a>
