--- a/src/app/modules/employee/employee-components/profile/profile.component.html
+++ b/src/app/modules/employee/employee-components/profile/profile.component.html
@@ -37,7 +37,7 @@
         </ul>
 
 
-        <a href="#" class="btn btn-primary btn-block"><b>Update</b></a>
+        <a href="#" class="btn btn-primary btn-block" [routerLink]="['/employee/edit_profile']"><b>Update</b></a>
       </div>
       <!-- /.card-body -->
     </div>
