--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -118,7 +118,7 @@
 
 
         <div class="info">
-          <a  class="d-block">Welcome {{ this.employeeName}} </a>
+          <a  class="d-block" style='margin-left:50px'>Welcome {{ this.employeeName}} </a>
         </div>
       </div>
 
@@ -186,7 +186,7 @@
 
           <li class="nav-item">
             <a routerLink="/employee/profile" routerLinkActive="active" class="nav-link">
-              <i class="nav-icon fas fa-th"></i>
+              <i class="nav-icon fas fa-edit"></i>
               <p>
                 Profile
               </p>
