--- a/src/app/modules/admin/admin-components/all-employees/all-employees.component.html
+++ b/src/app/modules/admin/admin-components/all-employees/all-employees.component.html
@@ -30,8 +30,8 @@
                 </tr>
               </thead>
               <tbody>
-                <tr *ngFor="let employee of employees; let i = index">
-                  <td>{{ i + 1 }}</td>
+                <tr *ngFor="let employee of slicedData; let i = index">
+                  <td>{{ pageEvent.pageIndex * pageEvent.pageSize + i + 1 }}</td>
                   <td>{{ employee.email }}</td>
                   <td>{{ employee.name }}</td>
                   <td>{{ employee.gender }}</td>
@@ -47,6 +47,9 @@
               </tbody>
             </table>
           </div><!-- /.card-body -->
+
+          <mat-paginator [length]="employees.length" [pageSize]="5" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons (page)="onPaginateChange($event)"></mat-paginator>
+
         </div><!-- /.card -->
       </div><!-- /.col-lg-12 -->
     </div><!-- /.row -->
