--- a/src/app/modules/admin/admin-components/all-vacations/all-vacations.component.html
+++ b/src/app/modules/admin/admin-components/all-vacations/all-vacations.component.html
@@ -33,8 +33,8 @@
                 </tr>
               </thead>
               <tbody>
-                <tr *ngFor="let vacation of vacations; let i = index">
-                  <td>{{ i + 1 }}</td>
+                <tr *ngFor="let vacation of slicedData; let i = index">
+                  <td>{{ pageEvent.pageIndex * pageEvent.pageSize + i + 1 }}</td>
                   <td>{{ vacation.name }}</td>
                   <td>{{ vacation.type }}</td>
                   <td>{{ vacation.sd | date: 'd/MMM/y' }}</td>
@@ -63,6 +63,9 @@
               </tbody>
             </table>
           </div><!-- /.card-body -->
+
+          <mat-paginator [length]="vacations.length" [pageSize]="5" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons (page)="onPaginateChange($event)"></mat-paginator>
+
         </div><!-- /.card -->
       </div><!-- /.col-lg-12 -->
     </div><!-- /.row -->
