--- a/src/app/modules/employee/employee-components/get-all-tickets/get-all-tickets.component.html
+++ b/src/app/modules/employee/employee-components/get-all-tickets/get-all-tickets.component.html
@@ -32,8 +32,8 @@
                 </tr>
               </thead>
               <tbody>
-                <tr *ngFor="let ticket of tickets; let i = index">
-                  <td>{{ i + 1 }}</td>
+                <tr *ngFor="let ticket of slicedData; let i = index">
+                  <td>{{ pageEvent.pageIndex * pageEvent.pageSize + i + 1 }}</td>
                   <td>{{ ticket.projectName }}</td>
                   <td>{{ ticket.tname }}</td>
                   <td>{{ ticket.duration }}</td>
@@ -53,6 +53,9 @@
               </tbody>
             </table>
           </div><!-- /.card-body -->
+
+          <mat-paginator [length]="tickets.length" [pageSize]="5" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons (page)="onPaginateChange($event)"></mat-paginator>
+
         </div><!-- /.card -->
       </div><!-- /.col-lg-12 -->
     </div><!-- /.row -->
