--- a/src/app/modules/admin/admin-components/all-vacations/all-vacations.component.css
+++ b/src/app/modules/admin/admin-components/all-vacations/all-vacations.component.css
@@ -9,6 +9,23 @@ h2 {
   height: 20px;
 }
 
+.empl{
+  position: relative;
+  bottom: 25px;
+}
+
+.btn-warning {
+  background-color:#007bff;
+  border-color: #007bff;
+  color: white;
+}
+
+.btn-warning:not(:disabled):not(.disabled).active, .btn-warning:not(:disabled):not(.disabled):active, .show>.btn-warning.dropdown-toggle {
+  background-color:#0069d9;
+  border-color: #0062cc;
+  color: white;
+}
+
 
 
 
